--- a/gwa/gwa-config-demo.yaml
+++ b/gwa/gwa-config-demo.yaml
@@ -1,13 +1,13 @@
 _format_version: '1.1'
 services:
-- name: smk-fap-fcp-svc
+- name: smk-fap-fcb-svc
   plugins: []
   routes:
   - hosts:
     - smk-fap-fcb
     methods:
     - GET
-    name: smk-fap-fcp-kong-route
+    name: smk-fap-fcb-kong-route
     paths:
     - /
     strip_path: false
@@ -17,4 +17,6 @@ services:
   tags:
   - OAS3_import
   - ns.smk-apps
-  host: smk-fap-fcp-svc.b16795-dev.svc
+  host: smk-fap-fcb-svc.b16795-dev.svc
+  port: 8888
+  
