--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -59,7 +59,8 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       #uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.OPENSHIFT_SERVER_URL != null }} && ${{ env.OPENSHIFT_TOKEN_DEV != null }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      # ${{ env.OPENSHIFT_SERVER_URL != '' }} &&
+      if:  ${{ env.OPENSHIFT_TOKEN_DEV != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
       run: |
         echo DEBUG_DEPLOY $DEBUG_DEPLOY
         echo OPENSHIFT_SERVER_URL $OPENSHIFT_SERVER_URL
