--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -14,7 +14,7 @@ jobs:
       run:
         shell: bash
 
-    name: Build BCDC-SMK container image
+    name: Testing conditional logic
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
     env:
@@ -60,7 +60,7 @@ jobs:
       id: GHAOpenshiftTest
       #uses: redhat-developer/openshift-actions@v1.1
       # ${{ env.OPENSHIFT_SERVER_URL != '' }} &&
-      if:  ${{ env.OPENSHIFT_TOKEN_DEV != '' }} && ${{ env.DEBUG_DEPLOY == false }}
+      if:  ${{ env.OPENSHIFT_TOKEN_DEV != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
       run: |
         echo DEBUG_DEPLOY $DEBUG_DEPLOY
         echo OPENSHIFT_SERVER_URL $OPENSHIFT_SERVER_URL
