--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -60,7 +60,7 @@ jobs:
       id: GHAOpenshiftTest
       #uses: redhat-developer/openshift-actions@v1.1
       # ${{ env.OPENSHIFT_SERVER_URL != '' }} &&
-      if:  ${{ env.OPENSHIFT_TOKEN_DEV != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if:  env.OPENSHIFT_TOKEN_DEV != '' && env.DEBUG_DEPLOY == 'false'
       run: |
         echo DEBUG_DEPLOY $DEBUG_DEPLOY
         echo OPENSHIFT_SERVER_URL $OPENSHIFT_SERVER_URL
