--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -22,7 +22,7 @@ jobs:
       OPENSHIFT_TOKEN_DEV: ${{secrets.OPENSHIFT_TOKEN_DEV}}
       GHCR_USER: ${{ secrets.GHCR_USER }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-      DEBUG_DEPLOY: false
+      DEBUG_DEPLOY: true
     outputs:
       dockerversiontag: ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
       
@@ -138,6 +138,6 @@ jobs:
     #    secrets for github user / token populated
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      if: ${{ github.event_name == 'pull_request'}} && ${{ env.GHCR_USER != '' }} &&  ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: ${{ github.event_name == 'push'}} && ${{ env.GHCR_USER != '' }} &&  ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
       run: |
         echo here tag pull request
