--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -74,7 +74,7 @@ jobs:
 
     # --------- required by build-push-action
     - name: Set up QEMU
-      if: ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: env.DEBUG_DEPLOY == 'false'
       run: |
         echo qemu step
       #uses: docker/setup-qemu-action@v1
@@ -83,7 +83,7 @@ jobs:
     - name: Set up Docker Buildx
       #uses: docker/setup-buildx-action@v1
       # && success()
-      if: ${{ env.DEBUG_DEPLOY == 'false' }} && ${{ success() }}
+      if:  env.DEBUG_DEPLOY == 'false' &&  success()
       run: |
         echo BUILDX step
       # with:
