--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,7 @@ jobs:
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      if: ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: env.DEBUG_DEPLOY == 'false'
       id: checkout
       with:
         fetch-depth: 0
@@ -56,7 +56,7 @@ jobs:
     # if oc secrets provided
     - name: calculateImageTag
       id: calculateImageTag
-      if: ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: env.DEBUG_DEPLOY == 'false'
       run: |
         DATESTAMP=$(date +%Y%m%d-%H%M)
         REGISTRY="docker.pkg.github.com"
@@ -73,7 +73,7 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.OPENSHIFT_SERVER_URL != '' }} && ${{ env.OPENSHIFT_TOKEN_DEV != '' }} &&  ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: env.OPENSHIFT_SERVER_URL != '' && env.OPENSHIFT_TOKEN_DEV != '' && env.DEBUG_DEPLOY == 'false'
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
@@ -83,7 +83,7 @@ jobs:
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
       id: cacheIssueUrl
-      if: ${{ github.event_name == 'pull_request' }} && {{ env.OPENSHIFT_SERVER_URL != '' }} && {{ env.OPENSHIFT_TOKEN_DEV != '' }} && {{ env.DEBUG_DEPLOY == 'false' }}
+      if: github.event_name == 'pull_request' && env.OPENSHIFT_SERVER_URL != '' && env.OPENSHIFT_TOKEN_DEV != '' && env.DEBUG_DEPLOY == 'false'
       run: |
         echo github event name ${{ github.event_name }}
         CONFMAP_NAME=${{ github.event.repository.name }}-gh-issues-cm
@@ -105,13 +105,13 @@ jobs:
 
     # --------- required by build-push-action
     - name: Set up QEMU
-      if: ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: env.DEBUG_DEPLOY == 'false'
       uses: docker/setup-qemu-action@v1
     
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: ${{ env.DEBUG_DEPLOY == 'false' }} && ${{ success() }}
+      if: env.DEBUG_DEPLOY == 'false' && success()
       with:
         buildkitd-flags: --debug
 
@@ -119,7 +119,7 @@ jobs:
     # - explicitly setting the GHCR_USER and TOKEN to help with transition to GHCR.IO
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
-      if: ${{ success() }} && ${{ env.GHCR_USER != '' }} &&  ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: success() && env.GHCR_USER != '' && env.GHCR_TOKEN != '' && env.DEBUG_DEPLOY == 'false'
       with:
         registry: docker.pkg.github.com
         username: ${{ secrets.GHCR_USER }}
@@ -129,7 +129,7 @@ jobs:
     #    Push disabled because not working with this action atm
     - name: Build and push
       id: docker_build
-      if: ${{ success() }} && ${{ env.GHCR_USER != '' }} && ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: success() && env.GHCR_USER != '' && env.GHCR_TOKEN != '' && env.DEBUG_DEPLOY == 'false'
       uses: docker/build-push-action@v2
       with:
         context: .
@@ -140,7 +140,7 @@ jobs:
 
     # --------- Push image to remote
     - name: Push to Github Packages
-      if: ${{ success() }} && ${{ env.GHCR_USER != '' }} &&  ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: success() && env.GHCR_USER != '' && env.GHCR_TOKEN != '' && env.DEBUG_DEPLOY == 'false'
       run: |
         echo pushing the image
         echo $GITHUB_EVENT_NAME
@@ -152,7 +152,7 @@ jobs:
     # --------- cache the image tag in a oc config map
     - name: cacheImageTag
       id: cacheImageTag
-      if: ${{ success() }} && ${{ env.OPENSHIFT_SERVER_URL != '' }} &&  ${{ env.OPENSHIFT_TOKEN_DEV != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: success() && env.OPENSHIFT_SERVER_URL != '' && env.OPENSHIFT_TOKEN_DEV != '' && env.DEBUG_DEPLOY == 'false'
       run: |
         IMAGETAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
         # needs to be made unique to app being deployed
@@ -181,7 +181,7 @@ jobs:
     #    secrets for github user / token populated
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      if: ${{ github.event_name == 'pull_request' }} && ${{ env.GHCR_USER != '' }} &&  ${{ env.GHCR_TOKEN != '' }} && ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: github.event_name == 'pull_request' && env.GHCR_USER != '' && env.GHCR_TOKEN != '' && env.DEBUG_DEPLOY == 'false'
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
