--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -3,9 +3,9 @@ name: testaction
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 # -------- DEBUGGING --------
-on: 
-  push:
-    branches: ['smk-cdci']
+# on: 
+#   push:
+#     branches: ['smk-cdci']
 
 jobs:
   # This workflow contains a single job called "build"
